# tts.server

./: .env.example  .gitignore  README.md  design.sh  llms.txt  pyproject.toml  run.sh  setup.sh
client/: index.html  package-lock.json
client/src/: App.css  App.jsx  index.css
launchd/: ai.kortexa.tts.plist  ai.kortexa.tts.server.plist  kortexa-tts-server.sh
scripts/: server.py  voice_designer.py
src/kortexa/tts/: cli.py  dotenv_helper.py  server.py  service.py
systemd/: kortexa-ai-tts.service
tests/: test.js
